# a2a-tck

./: .env.example  .gitignore  .ruff.toml  =6.7.1  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION_GUIDE.md  Makefile  PHASE2_PROGRESS.md  README.md  SDK_VALIDATION_GUIDE.md  SPECIFICATION_FINDINGS.md  SPEC_UPDATE_WORKFLOW.md  TEST_COVERAGE_ANALYSIS.md  WORKING_NOTES.md  WORKING_NOTES_PHASE2.md  a2a.proto  analyze_test_coverage.py  baseline_tests.txt  check_agent_field.sh  check_error_code.sh  check_spec.sh  check_spec_changes.py  compliance.json  compliance_levels.py  current_test_results.txt  dummy_sut_config.yaml  error_codes.json  error_codes_table.md  files_with_wrong_field.txt  generate_compliance_report.py  generate_grpc_stubs.sh  improvement_plan.md  integration_test_data.json  integration_test_report.md  mandatory_test_report.html  marker_validation_report.md  next_prompt.md  output.txt  (+24 more)
.github/workflows/: ci.yml  tck-runner.yml
PRD/: PRD.md  architecture.mmd  compatibility-report.mmd  compliance-report.mmd  test-parametrization.mmd  validation-flow.mmd
PRD/.obsidian/: workspace.json
backlog/: config.yml
backlog/completed/: task-1 - Phase-1-Foundation-Project-Structure-and-Specification-Integration.md  task-1.1 - Create-project-directory-structure.md  task-1.2 - Set-up-pyproject.toml-with-uv-build-configuration.md  task-1.3 - Sync-a2a.proto-specification-artifact.md  task-1.4 - Implement-RequirementSpec-base-class.md  task-1.7 - Create-requirement-registry-skeleton.md  task-12 - Replace-compliance-with-compatibility-throughout-the-codebase.md  task-2 - Phase-2-Validation-Layer-Schema-Validation-for-All-Transports.md  task-2.1 - Implement-JSONSchemaValidator-class.md  task-2.2 - Implement-ProtoSchemaValidator-class.md  task-2.3 - Implement-JSON-RPC-error-validator.md  task-2.4 - Implement-HTTPJSON-REST-error-validator.md  task-2.5 - Write-validator-unit-tests.md  task-23.1 - Phase-1-Create-Gherkin-feature-files.md  task-23.1.1 - Create-core_operations.feature.md  task-23.1.2 - Create-streaming.feature.md  task-23.2 - Phase-2-Build-code-generator.md  task-23.2.1 - Build-Gherkin-parser-and-action-data-model.md  task-23.2.2 - Build-Java-code-emitter-with-Jinja2-templates.md  task-23.2.3 - Create-generator-CLI-entry-point.md  task-23.3 - Phase-3-Generate-and-validate-Java-SUT.md  task-23.3.1 - Generate-Java-SUT-and-run-TCK-against-it.md  task-23.3.2 - Add-multi-turn-scenario-for-context-ID-generation-tck-multi-001.md  task-23.3.5 - Fix-CORE-CANCEL-001-add-cancelable-task-scenario-and-update-test.md  task-24 - Implement-task-history-conformance-tests.md  task-25 - Add-schema-validation-to-streaming-event-tests.md  task-3.2 - Implement-GrpcClient-transport.md  task-3.3 - Implement-JsonRpcClient-transport.md  task-3.4 - Implement-HttpJsonClient-transport.md  task-8.5 - Improve-error-messages-for-actionable-feedback.md  task-8.6 - Final-end-to-end-validation-with-reference-implementation.md
backlog/docs/: doc-1 - Phase-1-Implementation-Summary.md
backlog/milestones/: m-0 - tck-scenario-system.md
backlog/tasks/: task-1 - Phase-1-Foundation-Project-Structure-and-Specification-Integration.md  task-1.1 - Create-project-directory-structure.md  task-1.2 - Set-up-pyproject.toml-with-uv-build-configuration.md  task-1.3 - Sync-a2a.proto-specification-artifact.md  task-1.4 - Implement-RequirementSpec-base-class.md  task-1.5 - Generate-Python-proto-stubs-from-a2a.proto.md  task-1.6 - Create-JSON-Schema-from-proto-a2a.json.md  task-1.7 - Create-requirement-registry-skeleton.md  task-10 - Report-skipped-tests-in-compliance-collection.md  task-11 - Add-payload-validators-to-all-requirements-for-spec-conformance.md  task-11.1 - Phase-1-Reusable-validator-factories.md  task-11.2 - Phase-2-Core-Operations-validators.md  task-11.3 - Phase-3-Data-Model-validators.md  task-11.4 - Phase-4-Streaming-validators.md  (+88 more)
codegen/: __init__.py  generator.py  jakarta_emitter.py  java_emitter.py  model.py  parser.py  python_emitter.py  steps.py
current_spec/: README.md  buf.gen.yaml  info.json  specification.md  version_info.json
current_spec_backup/: a2a_schema.json
docs/: A2A_V030_FEATURES.md  AUTHENTICATION_SETUP.md  DOCUMENTATION_STANDARDS.md  SDK_VALIDATION_GUIDE.md  SPEC_UPDATE_WORKFLOW.md  SUT_REQUIREMENTS.md  TEST_COVERAGE_ANALYSIS.md
python-sut/tck_core_agent/: README.md  __init__.py  __main__.py  agent_executor.py  custom_request_handler.py  pyproject.toml
reports/: spec_analysis_report.md
scenarios/: core_operations.feature  streaming.feature
scripts/: generate_grpc_stubs.sh  install_buf.sh  update_spec.sh
spec_analysis/: A2A_SPECIFICATION.md  REQUIREMENT_ANALYSIS.md  TEST_CATEGORIZATION.md  TEST_CLASSIFICATION.md  WORKAROUND_AUDIT.md  a2a_schema.json  agent_card_schema.json  categorize_tests.py  extract_requirements.py  sut_workarounds.txt
spec_tracker/: README.md  SPEC_STRUCTURE.md  TEST_MAPPING.md  __init__.py  current_spec_refs.txt  main.py  report_generator.py  spec_comparator.py  spec_downloader.py  spec_parser.py  test_analyzer.py  test_comparator.py  test_coverage_analyzer.py  test_generator.py  test_impact_analyzer.py  test_parser.py
specification/: a2a.json  buf.gen.yaml  version.json
sut_configs/: sut_config_template.yaml  sut_java_sdk.yaml  sut_python_sdk.yaml
tck/: agent_card_utils.py  config.py  conftest.py  logging_config.py  message_utils.py  sut_client.py
tests/: capability_validator.py  conftest.py  markers.py  test_agent_card.py  test_agent_card_utils.py  test_authentication.py  test_concurrency.py  test_edge_cases.py  test_invalid_business_logic.py  test_json_rpc_compliance.py  test_message_send_method.py  test_protocol_violations.py  test_push_notification_config_methods.py  test_resilience.py  test_sdk_limitations.py  test_state_transitions.py  test_streaming_methods.py  test_tasks_cancel_method.py  test_tasks_get_method.py  test_transport_security.py
util_scripts/: README.md  analyze_test_coverage.py  check_spec_changes.py  compliance_levels.py  find_unmarked_tests.py  generate_compliance_report.py  update_current_spec.py
(+258 files in other folders)
