[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-tck"
version = "0.1.0"
description = "Technology Compatibility Kit for the A2A Protocol"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "A2A Protocol Developers"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-json-report>=1.5.0",
    "httpx>=0.24.0",
    "requests>=2.28.0",
    "responses>=0.23.0",
    "types-requests>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest-html>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
run-tck = "run_tck:main"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "core: mark test as a core test (always runs)",
    "all: mark test as an optional test (only runs with --test-scope all)",
    # Mandatory markers - MUST requirements
    "mandatory: Blocks SDK compliance",
    "mandatory_jsonrpc: JSON-RPC 2.0 compliance",
    "mandatory_protocol: A2A protocol requirements",
    # Optional markers - SHOULD/MAY requirements
    "optional_recommended: SHOULD requirements",
    "optional_feature: MAY requirements",
    "optional_capability: Capability-dependent",
    # Quality markers
    "quality_basic: Basic implementation quality",
    "quality_production: Production-ready quality",
    "quality_advanced: Advanced features",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true 