[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-tck"
version = "0.1.0"
description = "Technology Compatibility Kit for the A2A Protocol"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "A2A Protocol Developers"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-json-report>=1.5.0",
    "httpx>=0.24.0",
    "requests>=2.31.0",
    "responses>=0.23.0",
    "types-requests>=2.30.0",
    "deepdiff>=6.7.1",
    "jsonschema>=4.20.0",
    "packaging>=21.0",
    "PyYAML>=5.0.0",
    "python-dotenv>=1.0.0",
    # gRPC support for v0.3.0 multi-transport
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest-html>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
run-tck = "run_tck:main"

[tool.setuptools.packages.find]
include = ["spec_tracker*", "tck*", "spec_analysis*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "core: mark test as a core test (always runs)",
    "all: mark test as an optional test (only runs with --test-scope all)",
    # Mandatory markers - MUST requirements
    "mandatory: Blocks SDK compliance",
    "mandatory_jsonrpc: JSON-RPC 2.0 compliance",
    "mandatory_protocol: A2A protocol requirements",
    # Optional markers - SHOULD/MAY requirements
    "optional_recommended: SHOULD requirements",
    "optional_feature: MAY requirements",
    "optional_capability: Capability-dependent",
    # Quality markers
    "quality_basic: Basic implementation quality",
    "quality_production: Production-ready quality",
    "quality_advanced: Advanced features",
    # Transport equivalence markers
    "transport_equivalence: Multi-transport functional equivalence",
    # A2A version-specific markers
    "a2a_v030: A2A v0.3.0 specific features",
    # General markers for convenience
    "optional: General optional functionality",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true