[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-tck"
version = "1.0.0"
description = "A2A Protocol Technology Compatibility Kit"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "A2A Protocol Developers"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "grpcio>=1.60",
    "protobuf>=4.25",
    "googleapis-common-protos>=1.62",
    "jsonschema>=4.21",
    "pytest-html>=4.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
run-tck = "run_tck:main"

[tool.hatch.build.targets.wheel]
packages = ["tck", "specification"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "core: Core A2A protocol requirements",
    "must: MUST-level requirements (hard failure)",
    "should: SHOULD-level requirements (expected failure)",
    "may: MAY-level requirements (skip if not declared)",
    "grpc: gRPC transport specific tests",
    "jsonrpc: JSON-RPC transport specific tests",
    "http_json: HTTP+JSON transport specific tests",
    "streaming: Streaming-related tests",
    "integration: Integration tests (require running SUT)",
]

[tool.ruff]
line-length = 130

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
